# lazyllama

./: .gitignore  lazyllama.py  pyproject.toml
src/: constants.py
src/core/: alias_manager.py  server_manager.py  singletons.py
src/core/client/: lazyllama.py
src/core/config/: config.py
src/core/models/: alias.py
src/core/servers/: base_server.py  command_server.py  llamacpp_server.py  ollama_server.py
tests/core/alias_manager/: test_alias_manager.py
tests/core/client/: test_lazyllama.py
tests/core/config/: test_config.py
tests/core/server_manager/: test_eviction.py  test_server_manager.py
tests/core/servers/: __init__.py  test_base_server.py  test_command_server.py
