[project]
name = "lazyllama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.17",
    "openai>=1.75.0",
    "psutil>=7.0.0",
    "pydantic>=2.11.3",
    "pytest-asyncio>=0.26.0",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "nvidia-ml-py3>=7.352.0",
]
